--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-webview": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
