--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/auth": "^18.6.1",
+    "@react-native-firebase/firestore": "^18.6.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-webview": "^13.6.0"
+    "react-native-webview": "^13.6.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
