--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^1.9.7",
+    "formik": "^2.4.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.5",
@@ -25,7 +26,8 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-webview": "^13.6.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
